manque hover et fonte

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -39,11 +39,12 @@ h2 {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  margin-left: 200px;
 }
 hr {
   border: 1px solid #ffffff;
   margin-left: 200px;
   margin-right: 200px;
-  margin-top: 20px;
+  margin-top: 84px;
   margin-bottom: 40px;
 }
