--- a/src/scss/modules/_home.scss
+++ b/src/scss/modules/_home.scss
@@ -15,14 +15,12 @@ video {
   text-align: center;
   font-family: Thency;
   font-size: 36px;
-
   font-weight: 400;
   margin-top: 25px;
   letter-spacing: 8.28px;
 }
 .btn {
   background: none;
-
   padding: 40px 130px 40px 130px;
   justify-content: center;
   align-items: center;
@@ -45,7 +43,6 @@ video {
   color: #fff;
   font-family: "ITC Avant Garde Gothic Pro";
   font-size: 22px;
-
   font-weight: 500;
 }
 .button-container {
@@ -65,8 +62,8 @@ video {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-left: 10vw;
+  margin-right: 10vw;
   margin-bottom: 120px;
 }
 .card-container {
