--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -39,12 +39,28 @@ h2 {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-left: 200px;
+  margin-left: 10vw;
 }
 hr {
   border: 1px solid #ffffff;
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-left: 10vw;
+  margin-right: 10vw;
   margin-top: 84px;
   margin-bottom: 40px;
+}
+@media (max-width: 1230px) {
+  .text-section img {
+    width: 400px;
+  }
+  .text-section {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 1100px) {
+  .text-section img {
+    width: 300px;
+  }
+  .text-section {
+    margin-top: 30px;
+  }
 }
