--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -20,8 +20,8 @@ h1 {
   font-family: Thency;
   font-size: 96px;
   font-weight: 400;
-  margin-top: 53px;
-  margin-left: 120px;
+  margin-top: 5.3vw;
+  margin-left: 12vw;
 }
 h3 {
   color: #fff;
@@ -30,7 +30,7 @@ h3 {
   font-style: italic;
   font-weight: 400;
   margin-top: -20px;
-  margin-left: 200px;
+  margin-left: 20vw;
 }
 h2 {
   color: #fff;
@@ -45,15 +45,15 @@ hr {
   border: 1px solid #ffffff;
   margin-left: 10vw;
   margin-right: 10vw;
-  margin-top: 84px;
-  margin-bottom: 40px;
+  margin-top: 8vw;
+  margin-bottom: 4vw;
 }
 @media (max-width: 1230px) {
   .text-section img {
     width: 400px;
   }
   .text-section {
-    margin-top: 30px;
+    margin-top: 3vw;
   }
 }
 @media (max-width: 1100px) {
@@ -61,6 +61,6 @@ hr {
     width: 300px;
   }
   .text-section {
-    margin-top: 30px;
+    margin-top: 3vw;
   }
 }
